<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cloudymous.kopicloud.MenuEditNomorKeluarga">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_family_member"
            android:textSize="20sp"
            android:textColor="@color/regularTextStyle"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/namaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:text="@string/nama_text_view"/>

            <EditText
                android:id="@+id/newFamilyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:inputType="textCapWords"
                android:hint="Enter Family Name"/>

            <TextView
                android:id="@+id/nomorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/namaTextView"
                android:textSize="20sp"
                android:text="@string/phone_number_text_view"/>

            <EditText
                android:id="@+id/newPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="phone"
                android:textAlignment="center"
                android:hint="Enter Family Phone Number"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:onClick="editNomorKeluarga"
            android:id="@+id/addFamilyMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_default"/>

        <TextView
            style="@style/regularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_family_button_text" />

    </RelativeLayout>

</LinearLayout>
