<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cloudymous.kopicloud.MenuTeleponKeluarga">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/call_family"
            android:textSize="20dp"
            android:textColor="@color/regularTextStyle"/>

    </RelativeLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/foto"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_contact_phone_white_48dp"/>

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/foto"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/foto"
                android:layout_toRightOf="@+id/foto"
                android:textColor="@color/regularTextStyle"
                android:textSize="20sp"
                android:text="@string/have_not_set" />

            <TextView
                android:id="@+id/nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_below="@id/nama"
                android:layout_toEndOf="@+id/foto"
                android:layout_toRightOf="@+id/foto"
                android:textColor="@color/regularTextStyle"
                android:text="@string/have_not_set" />

            <ImageView
                android:onClick="telepon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_phone_white_48dp"/>

        </RelativeLayout>

    </ScrollView>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp">
        
        <ImageView
            android:onClick="editNomorButton"
            android:id="@+id/buttonAddFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_default"/>

        <TextView
            style="@style/regularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_family_button_text" />

    </RelativeLayout>

</LinearLayout>
